--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ section#skill .skill_main .box dl dd {position: relative; font-size: 14px; line-
 
 section#skill .skill_main .box.about dl dd {text-align: center;}
 section#skill .skill_main .box.contacts dl dd {padding-left: 60px;}
-section#skill .skill_main .box.licenses dl dd {padding-left: 60px;}
+section#skill .skill_main .box.licences dl dd {padding-left: 60px;}
 section#skill .skill_main .box.tools dl dd {padding-left: 65px;}
 section#skill .skill_main .box.skills dl dd {padding-left: 85px;}
 
